<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.ProfileActivity">

    <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

        <RelativeLayout
                android:id="@+id/profileLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/grid_3"
                android:layout_marginBottom="@dimen/grid_3"
                android:gravity="center_horizontal">

            <ImageView
                    android:id="@+id/photoIV"
                    android:layout_width="@dimen/standard_width"
                    android:layout_height="@dimen/standard_width"
                    android:layout_marginBottom="@dimen/grid_2"
                    android:src="@drawable/default_user"/>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/nameTIL"
                    android:layout_width="@dimen/standard_width"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/grid_2"
                    android:layout_below="@id/photoIV">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/nameET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_name"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/emailTIL"
                    android:layout_width="@dimen/standard_width"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/grid_2"
                    android:layout_below="@id/nameTIL">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/emailET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_email"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/phoneTIL"
                    android:layout_width="@dimen/standard_width"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/grid_2"
                    android:layout_below="@id/emailTIL">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/phoneET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_phone"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                    android:id="@+id/applyButton"
                    android:layout_width="@dimen/standard_width"
                    android:layout_height="@dimen/standard_height"
                    android:layout_below="@id/phoneTIL"
                    android:onClick="onApply"
                    android:layout_marginBottom="@dimen/grid_3"
                    android:text="@string/button_apply"
                    style="@style/StandardButton"/>

            <Button
                    android:id="@+id/deleteAccountButton"
                    android:layout_width="@dimen/standard_width"
                    android:layout_height="@dimen/standard_height"
                    android:layout_below="@id/applyButton"
                    android:onClick="onDelete"
                    android:text="@string/button_delete"
                    style="@style/StandardButton"/>

        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
            android:id="@+id/progressLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/transparent_grey"
            android:visibility="gone">

        <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>